--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  background-color: white;
 }
 
 .title {
